文字を少し大きく

--- a/book/sty/bookmacro-bookbinding.sty
+++ b/book/sty/bookmacro-bookbinding.sty
@@ -71,12 +71,12 @@
 
 %%list
 \renewenvironment{reviewemlist}{%
-  \medskip\scriptsize\begin{shaded}\setlength{\baselineskip}{1.3zw}\begin{alltt}}{%
+  \medskip\footnotesize\begin{shaded}\setlength{\baselineskip}{1.3zw}\begin{alltt}}{%
   \end{alltt}\end{shaded}}
 
 %%table
 \renewenvironment{reviewtable}[1]{%
-  \begin{center}\scriptsize\setlength{\baselineskip}{1.5zw}
+  \begin{center}\footnotesize\setlength{\baselineskip}{1.5zw}
     \renewcommand\arraystretch{1.5}
     \begin{tabular}{#1}}{%
     \end{tabular}
