--- a/book/sty/bookmacro.sty
+++ b/book/sty/bookmacro.sty
@@ -94,13 +94,16 @@
 \setbox\z@\hbox{\hspace{\fill}\@chapapp\fontsize{45pt}{0pt}\selectfont\thechapter\huge\@chappos\hskip1zw}%
 %\addtolength\@tempdima{-\wd\z@}% これで縦箱の長さが行幅と同じになります。
 \unhbox\z@\par%%%%\parとすることで章番号とタイトルが分離。
+\vskip\baselineskip
+\vtop\textgt{\hspace{\fill}\LARGE\hsize\@tempdima#1}%章のタイトル出力
+\else
+\vtop\textgt{\LARGE\hsize\@tempdima#1}%章のタイトル出力
 \fi
+\vskip.5\baselineskip %縦方向に空白
 %\vskip\baselineskip %縦方向に空白
 %%\hrule height1pt %太さ1ptの横罫線を引く
 %%\vskip.1\baselineskip
-\vskip\baselineskip
-\vtop\textgt{\hspace{\fill}\LARGE\hsize\@tempdima#1}%章のタイトル出力
-\vskip.5\baselineskip %縦方向に空白
+
 %%\hrule height1pt %太さ1ptの横罫線を引く
 \fi}\vskip1\Cvs}
 
