--- a/book/sty/bookmacro-bookbinding.sty
+++ b/book/sty/bookmacro-bookbinding.sty
@@ -25,7 +25,7 @@
 \fancyhead[LE]{\gtfamily\sffamily\bfseries\upshape \leftmark}
 \fancyfoot[RHO]{\gtfamily\sffamily\bfseries\upshape \rightmark}
 \fancyfoot[LE,RO]{\thepage}
-\renewcommand{\sectionmark}[1]{\markright{\thesection~#1}{}}
+\renewcommand{\sectionmark}[1]{\markright{\thesection~#1}{}\rule[15pt]{12.8cm}{.2pt}\vspace{-2.4zh}}
 \renewcommand{\chaptermark}[1]{\markboth{\prechaptername\ \thechapter\ \postchaptername~#1}{}}
 \renewcommand{\headfont}{\gtfamily\sffamily\bfseries}
 
