--- a/book/sty/bookmacro.sty
+++ b/book/sty/bookmacro.sty
@@ -22,7 +22,7 @@
 \rhead{}
 \cfoot{}
 \rfoot{\thepage}
-\renewcommand{\sectionmark}[1]{\markright{\thesection~#1}{}}
+\renewcommand{\sectionmark}[1]{\markright{\thesection~#1}{}\rule[15pt]{12.8cm}{.2pt}\vspace{-2.4zh}}
 \renewcommand{\chaptermark}[1]{\markboth{\prechaptername\ \thechapter\ \postchaptername~#1}{}}
 \renewcommand{\headfont}{\gtfamily\sffamily\bfseries}
 
