画像を右寄せできるようにした
@<raw>{|latex|\rightimage{test\}{ss02\}{自分で画像を用意すればボタンやトグルの画像を変更することができる\}}

--- a/book/sty/bookmacro.sty
+++ b/book/sty/bookmacro.sty
@@ -13,6 +13,7 @@
 %% from review-pdfmaker
 \usepackage{fancyhdr}
 \usepackage{ulem}
+\usepackage{floatflt}
 %%\usepackage{supertabular}
 \setlength{\headheight}{29pt}
 
